@@ -2,6 +2,12 @@ from test.test_support import verbose, TestSkipped, run_unittest
 from _locale import (setlocale, LC_NUMERIC, RADIXCHAR, THOUSEP, nl_langinfo,
                     localeconv, Error)
 import unittest
+from platform import uname
+
+if uname()[0] == "Darwin":
+    maj, min, mic = [int(part) for part in uname()[2].split(".")]
+    if (maj, min, mic) < (8, 0, 0):
+        raise TestSkipped("locale support broken for OS X < 10.4")
 
 candidate_locales = ['es_UY', 'fr_FR', 'fi_FI', 'es_CO', 'pt_PT', 'it_IT',
     'et_EE', 'es_PY', 'no_NO', 'nl_NL', 'lv_LV', 'el_GR', 'be_BY', 'fr_BE',
