@@ -12,6 +12,9 @@ What's New in Python 2.5 alpha 1?
 Core and builtins
 -----------------
 
+- test__locale is skipped on OS X < 10.4 (only partial locale support is
+present).
+
 - SF bug #893549: parsing keyword arguments was broken with a few format
   codes.
 
